--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - 404 - Glitched out</title>
+  <title>USTM HACKED</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<a href="https://codepen.io/ZonFire99/full/njdls/" class="viewFull" target="_parent">View in full it looks way better :)</a>
+<a href="" class="viewFull" target="_parent">)</a>
 
 <div class="error">
 
