--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<a href="" class="viewFull" target="_parent">)</a>
+<a href="" class="viewFull" target="_parent"</a>
 
 <div class="error">
 
